--- a/fraud_detector/vercel.json
+++ b/fraud_detector/vercel.json
@@ -1,1 +1,20 @@
 
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "manage.py",
+      "use": "@vercel/python"
+    },
+    {
+      "src": "detector/wsgi.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "detector/wsgi.py"
+    }
+  ]
+}
